--- a/estilo.css
+++ b/estilo.css
@@ -12,8 +12,16 @@
 body{
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
-    font-weight: <weight>;
+    font-weight: 400;
     font-style: normal;
     font-variation-settings:
       "wdth" 100;
+} 
+  
+.conteudo-principal{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
 }
+
