--- a/estilo.css
+++ b/estilo.css
@@ -23,5 +23,8 @@ body{
    flex-direction: column;
    justify-content: center;
    align-items: center;
+   max-width: 1200px;
+   width: 100%;
+   margin: 0 auto;
 }
 
