--- a/estilo.css
+++ b/estilo.css
@@ -36,6 +36,10 @@ body{
 .botao{
    font-size: 18px;
    background-color: var(--botao-inativo);
+   padding: 1em;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 
 
 }
