--- a/estilo.css
+++ b/estilo.css
@@ -14,8 +14,8 @@ body{
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    font-variation-settings:
-      "wdth" 100;
+    background-color: #000000;
+   
 } 
   
 .conteudo-principal{
