--- a/estilo.css
+++ b/estilo.css
@@ -4,7 +4,7 @@
 --cor-de-fundo:#ffffff;
 --verde:#6FFF57;
 --branco:#ffffff; 
---botao-ativo:#3A375E;
+--botao-ativo:#ffffff;
 --botao-inativo: rgba(58,54,55,94,0.5);
 --texto-fundo: rgba(58,55,94,0.3);
 } 
