--- a/estilo.css
+++ b/estilo.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 :root{
---cor-de-fundo:#ffffff;
+--cor-de-fundo:#3A375E;
 --verde:#6FFF57;
 --branco:#ffffff; 
---botao-ativo:#ffffff;
+--botao-ativo:#3A375E;
 --botao-inativo: rgba(58,54,55,94,0.5);
 --texto-fundo: rgba(58,55,94,0.3);
 } 
@@ -15,6 +15,7 @@ body{
     font-weight: 400;
     font-style: normal;
     background-color: #000000;
+    color: var(--branco);
    
 } 
   
