--- a/estilo.css
+++ b/estilo.css
@@ -48,6 +48,13 @@ body{
    border-right: 2px solid var(--botao-ativo);
    border-top: none;
    
+}.botoes{
+display: block;
+}
 
-
+@media screen and (min-widht:768px){
+   .botoes{
+      display: flex;
+   }
+   
 }
