--- a/estilo.css
+++ b/estilo.css
@@ -48,12 +48,12 @@ body{
    border-right: 2px solid var(--botao-ativo);
    border-top: none;
    
-}.botoes{
+}principal-botoes{
 display: block;
 }
 
 @media screen and (min-widht:768px){
-   .botoes{
+   principal-botoes{
       display: flex;
    }
    
