--- a/estilo.css
+++ b/estilo.css
@@ -53,7 +53,7 @@ body{
 display: block;
 }
 
-@media screen and (min-widht:768px){
+@media screen and (min-width:768px){
    .principal-botoes{
       display: flex;
    }
