--- a/estilo.css
+++ b/estilo.css
@@ -49,6 +49,20 @@ body{
    border-top: none;
    
 }
+ 
+.botao:first-child{
+ border-radius: 40px 40px 0 0;
+
+}
+ 
+
+    
+  
+
+
+
+
+
 .principal-botoes{
 display: block;
 }
