--- a/estilo.css
+++ b/estilo.css
@@ -56,12 +56,6 @@ body{
 }
  
 
-    
-  
-
-
-
-
 
 .principal-botoes{
 display: block;
@@ -71,5 +65,15 @@ display: block;
    .principal-botoes{
       display: flex;
    }
-   
 }
+
+.botao:first-child{
+   border-radius: 40px 0 0 0;
+  
+  }
+  
+  .botao:last-child{
+      border-radius: 0 40px 0 0;
+  }
+
+
