--- a/estilo.css
+++ b/estilo.css
@@ -84,3 +84,10 @@ display: block;
   }
 
   
+.abas-textos{
+background-color: var(--cor-de-fundo);
+padding: 40px;
+border-radius: 0 0 40px 40px;
+
+}
+
