--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 :root{
---cor-de-fundo:#ff00d4;
+--cor-de-fundo:#3A375E;
 --verde:#6FFF57;
 --branco:#ffffff; 
 --botao-ativo:#3A375E;
@@ -14,7 +14,7 @@ body{
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    background-color: #ffffff;
+    background-color: #000000;
     color: var(--branco);
    
 } 
