--- a/estilo.css
+++ b/estilo.css
@@ -14,7 +14,7 @@ body{
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    background-color: #000000;
+    background-color: #7c00b6;
     color: var(--branco);
    
 } 
