--- a/estilo.css
+++ b/estilo.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 :root{
---cor-de-fundo:#3A375E;
+--cor-de-fundo:#131316;
 --verde:#6FFF57;
 --branco:#ffffff; 
---botao-ativo:#3A375E;
+--botao-ativo:#131316;
 --botao-inativo: rgba(58,55,94,0.5);
 --texto-fundo: rgba(58,55,94,0.3);
 } 
