--- a/estilo.css
+++ b/estilo.css
@@ -95,3 +95,6 @@ border-radius: 0 0 40px 40px;
    text-align: center;
    font-size: 28px;
 }
+   .aba-conteudo-titulo-secundario{
+      background-color: var(--verde);
+   }
