--- a/estilo.css
+++ b/estilo.css
@@ -66,7 +66,14 @@ display: block;
    border-bottom: 4px solid var(--verde);
    
      }
-   
+     .aba-conteudo.botao.ativo{
+      display: block;
+     }
+     
+   .aba-conteudo{
+      display: none;
+   }
+
 
 @media screen and (min-width:768px){
    .principal-botoes{
