--- a/estilo.css
+++ b/estilo.css
@@ -66,7 +66,7 @@ display: block;
    border-bottom: 4px solid var(--verde);
    
      }
-     .aba-conteudo.botao.ativo{
+     .aba-conteudo.ativo{
       display: block;
      }
      
